staging-cluster-services/istio-system/no-operator-control-plane/tags/prod-stable.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  labels:
    app: sidecar-injector
    install.operator.istio.io/owning-resource: unknown
    istio.io/rev: 1-22-0
    istio.io/tag: prod-stable
    operator.istio.io/component: Pilot
    release: istio
  name: istio-revision-tag-prod-stable
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRV0hJWS96MjFGSElXZ016Smo0TjJ6ekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJek1ESXdPVEU1TlRZME0xb1hEVE16TURJdwpOakU1TlRZME0xb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNYnh0RU9lOFlDa3Z5UmQ0RnV0OWlmOXNvYzIwdzRZZXh2d0l0eXQKTkxvUjhlS0FiUncrK1RzdG51d1RkVFMyZDlDYXllc0RXdzVBYmtsMGsxcWZ1VTU4WlJvYmxQM1lOQThXa1I1RApNVEFJMTNFUUgxb0 [...]
    service:
      name: istiod-1-22-0
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  name: rev.namespace.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: In
      values:
      - prod-stable
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRV0hJWS96MjFGSElXZ016Smo0TjJ6ekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJek1ESXdPVEU1TlRZME0xb1hEVE16TURJdwpOakU1TlRZME0xb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNYnh0RU9lOFlDa3Z5UmQ0RnV0OWlmOXNvYzIwdzRZZXh2d0l0eXQKTkxvUjhlS0FiUncrK1RzdG51d1RkVFMyZDlDYXllc0RXdzVBYmtsMGsxcWZ1VTU4WlJvYmxQM1lOQThXa1I1RApNVEFJMTNFUUgxb0 [...]
    service:
      name: istiod-1-22-0
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  name: rev.object.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: DoesNotExist
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
    - key: istio.io/rev
      operator: In
      values:
      - prod-stable
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
